force-app/main/default/objects/ARF_Plan_Invoice__c/ARF_Plan_Invoice__c.object-meta.xml
<CustomObject>
    <label>Plan Invoice</label>
    <nameField><label>Plan Invoice Number</label><displayFormat>PINV-{0000}</displayFormat><type>AutoNumber</type></nameField>
    <pluralLabel>Plan Invoices</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>