force-app/main/default/objects/ARF_Plan_Invoice__c/fields/Amount_Included__c.field-meta.xml
<CustomField>
    <fullName>Amount_Included__c</fullName>
    <label>Amount Included</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>