force-app/main/default/objects/ARF_Plan_Invoice__c/fields/Invoice__c.field-meta.xml
<CustomField>
    <fullName>Invoice__c</fullName>
    <label>Invoice</label>
    <type>Lookup</type>
    <referenceTo>ARF_Invoice__c</referenceTo>
    <relationshipName>Plan_Invoices</relationshipName>
    <relationshipLabel>Plan Invoices</relationshipLabel>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>